@@ -1,3 +1,9 @@
+2005-07-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dir.c: Fixed up support for swapping "double complex"
+	values (128 bits as 2 64 bits doubles).  GDAL gcore tests now
+	pass on bigendian (macosx) system.
+
 2005-07-28  Andrey Kiselev  <dron@remotesensing.org>
 
 	* libtiff/{tif_aux.c, tif_dirread.c, tif_fax3.c, tiffiop.h}: Rename
